# mac-display

./: README.md  package.json  setup.cfg  setup.py  test.sh
scripts/: display  display-sleep  display-state  display-wake
tests/mac-display/examples/: sleep.sh  state.sh
