# https://pypi.org/project/setupcfg-generator/
[metadata]
name = mac-display
version = 2019.4.13
url = https://github.com/looking-for-a-job/mac-display
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = display

[options]
install_requires = 
	public
	runcmd
	setuptools
scripts = 
	scripts/display
	scripts/display-sleep
	scripts/display-state
	scripts/display-wake
packages = 
	mac_display
